feat: service 페이지 적용